# tfpt-theoryv4

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  changelog.tex  introduction.aux  introduction.out  introduction.tex  introduction.toc  lean_manifest.sha256  manifest.sha256  next.txt  origin_theory.aux  origin_theory.out  origin_theory.tex  origin_theory.toc  predictions.txt  requirements.txt  tfpt_1_architecture_e8.aux  tfpt_1_architecture_e8.out  tfpt_1_architecture_e8.tex  tfpt_1_architecture_e8.toc  tfpt_2_standard_model.aux  tfpt_2_standard_model.out  tfpt_2_standard_model.tex  tfpt_2_standard_model.toc  tfpt_3_e8_audit_bootstrap.aux  tfpt_3_e8_audit_bootstrap.out  tfpt_3_e8_audit_bootstrap.tex  tfpt_3_e8_audit_bootstrap.toc  tfpt_4_frontier.aux  tfpt_4_frontier.out  tfpt_4_frontier.tex  tfpt_4_frontier.toc  tfpt_5_redteam.aux  tfpt_5_redteam.tex  tfpt_docset.tex  tfpt_figures.tex  tfpt_horizon_readouts.aux  (+11 more)
.devcontainer/: devcontainer.json
docs/: CLAIMS.md  README.md  (+6 more)
experiments/e8-ladder-bed/: README.md  pyproject.toml
experiments/e8-ladder-bed/data/: baco2v2o8_ins_peaks.csv  conb2o6_thz_peaks.csv
experiments/e8-ladder-bed/hypotheses/: e8_ladder_bed_v1.yaml
experiments/e8-ladder-bed/results/: assignments.csv  assignments2d.csv  results.json  results2d.json
experiments/e8-ladder-bed/scripts/: extract_zou_fig3.py
experiments/e8-ladder-bed/src/tfpt_e8lb/: __init__.py  cli.py  cli2d.py  controls.py  controls2d.py  ladder.py  recover.py  recover2d.py  synth2d.py
experiments/e8-ladder-bed/tests/: test_ladder_exact.py  test_recover2d.py
(+814 files in other folders)
